<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_growing"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/growing"/>
        <item
            android:id="@+id/nav_red_paper"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/red_paper"/>

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/statistics"/>

    </group>

    <item android:title="其它">
        <menu>

            <item
                android:id="@+id/nav_about_me"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_me"/>

        </menu>
    </item>

</menu>
