<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">


        <kiven.com.shuye.widget.WheelView
            android:id="@+id/pop_wv_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="时"
            android:textSize="16sp"/>

        <kiven.com.shuye.widget.WheelView
            android:id="@+id/pop_wv_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="分"
            android:textSize="16sp"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/dialog_rg_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/dialog_rb_type_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milk"/>

        <RadioButton
            android:id="@+id/dialog_rb_type_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/water"/>

        <RadioButton
            android:id="@+id/dialog_rb_type_su_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/supplement_food"/>

    </RadioGroup>


    <LinearLayout
        android:id="@+id/ll_milk_or_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="量:"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/dialog_et_account"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ml"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/dialog_tv_add_10"
            style="@style/add_account"
            android:text="+10"/>

        <TextView
            android:id="@+id/dialog_tv_add_30"
            style="@style/add_account"
            android:text="+30"/>

        <TextView
            android:id="@+id/dialog_tv_add_50"
            style="@style/add_account"
            android:text="+50"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_su_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/dialog_et_su_food"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="8"
            android:maxLines="1"
            android:textSize="14sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <CheckBox
            android:id="@+id/dialog_cb_shit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="拉"/>

        <CheckBox
            android:id="@+id/dialog_cb_paper_diaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="换"/>

    </LinearLayout>

</LinearLayout>

